--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -62,7 +62,7 @@ a {
   clip-path: polygon(
     0 0,
     100% 0,
-    100% 75vh,
+    100% 85%,
     0 100%
   ); /* cuts image: polygon(top-left x y, top-right x y, bottom-right x y, bottom-left x y) */
   height: 90vh;
@@ -241,7 +241,7 @@ a {
 }
 
 .card-body {
-  height: 40vh;
+  height: 40%;
   padding: 2rem;
 }
 
@@ -318,6 +318,26 @@ h4 {
 
 /***** PORTFOLIO *****/
 
+.short {
+  clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
+  height: 50%;
+}
+
+.heading-short {
+  color: #fbfefb;
+  font-size: 2rem;
+  font-weight: 800;
+  letter-spacing: 1.5rem;
+  line-height: 6rem;
+  margin: 4rem;
+  margin-top: 0.5rem;
+  text-transform: uppercase;
+
+  animation-name: moveInRight;
+  animation-duration: 2s;
+  animation-timing-function: ease-out;
+  backface-visibility: hidden;
+}
 /***** CONTACT *****/
 
 .icons {
@@ -327,6 +347,48 @@ h4 {
 
 .icons:hover {
   color: #ef6461;
+}
+
+/***** NECESSARY MEDIA QUERIES *****/
+@media screen and (max-width: 980px) {
+  .lead {
+    margin-top: 8%;
+  }
+  .card {
+    margin-top: 5%;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .lead {
+    margin-top: 10%;
+  }
+  .card {
+    margin-top: 5%;
+  }
+}
+
+@media screen and (max-width: 640px) {
+  .header {
+    height: 75vh;
+  }
+  .heading-primary {
+    line-height: 3.5rem;
+    margin-bottom: 1.25rem;
+  }
+  .heading-primary-main {
+    font-size: 3rem;
+  }
+  .heading-primary-sub {
+    font-size: 1.35rem;
+    letter-spacing: 0.75rem;
+  }
+  .lead {
+    margin-top: 10%;
+  }
+  .card {
+    margin-top: 5%;
+  }
 }
 
 /***** ANIMATIONS *****/
