changed height for responsiveness again

--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -440,7 +440,7 @@ h3 {
 
 @media screen and (max-width: 768px) {
   .header {
-    height: 75vh;
+    height: 100%;
   }
   .heading-primary {
     line-height: 3.5rem;
